examples/valid/program39.c
int main() {
    int x;
    int y;
    x = 5;
    y = 10;
    if (x > 0) {
        if (y > 0) {
            return 1;
        }
    }
    return 0;
}

