examples/invalid/program43.c
int main() {
    int x;
    x = 5;
    if (x > 0) {
        return 1;
    } else {
        return 0;
    }
    int y;
    y = 10;
    return y;
}

